Fixed alignment on first child element css for donut charts.

--- a/stockportfolio/static/css/custom.css
+++ b/stockportfolio/static/css/custom.css
@@ -1276,7 +1276,7 @@ table.tile_info td i {
 }
 
 table.tile_info td:first-child {
-    width: 83%;
+    width: 63%;
 }
 
 td span {
